force-app/main/default/objects/Loan_Event__c/Loan_Event__c.object-meta.xml
<CustomObject>
    <label>Loan Event</label>
    <nameField>
        <label>Loan Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>