force-app/main/default/objects/Loan_Event__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Loan Events</relationshipLabel>
    <relationshipName>Loan_Events</relationshipName>
    <type>Lookup</type>
</CustomField>