force-app/main/default/objects/Loan_Event__c/fields/Status_Duration__c.field-meta.xml
<CustomField>
    <fullName>Status_Duration__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Status_Entered_Date_Time__c)), NOT(ISBLANK(Status_Exit_Date_Time__c))), TEXT(FLOOR(Status_Exit_Date_Time__c - Status_Entered_Date_Time__c)) &amp; &apos; days&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Duration</label>
    <type>Text</type>
</CustomField>