force-app/main/default/objects/Loan_Event__c/fields/Status_Exit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Exit_Date_Time__c</fullName>
    <label>Status Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>