force-app/main/default/objects/Loan_Event__c/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Events</relationshipName>
    <type>Lookup</type>
</CustomField>